Fix alignement

--- a/framework/scss/components/_forms.scss
+++ b/framework/scss/components/_forms.scss
@@ -528,6 +528,10 @@ input[type=radio],
     .icon {
         color: $ds44-error;
     }
+
+    .ds44-iconInnerText{
+      vertical-align: middle;
+    }
 }
 
 
